--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
         restart: always
         container_name: testos-db
         hostname: testos-db
+        volumes:
+            - ./.docker/postgresql:/var/lib/postgresql
         environment:
             POSTGRES_PASSWORD: secret
         ports:
