--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,15 @@ services:
             -   "127.0.0.1:5432:5432"
         networks:
             - testos
+    
+    rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+            - "5672:5672"    # AMQP
+            - "15672:15672"  # Web UI
+        environment:
+            RABBITMQ_DEFAULT_USER: guest
+            RABBITMQ_DEFAULT_PASS: guest
 
 networks:
     testos:
