--- a/ProductBase/.env.example
+++ b/ProductBase/.env.example
@@ -4,8 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://product-base.loc
 
-LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
