--- a/Admin/.env.example
+++ b/Admin/.env.example
@@ -16,3 +16,9 @@ DB_USERNAME=postgres
 DB_PASSWORD=secret
 
 VITE_APP_NAME="${APP_NAME}"
+
+IMPORT_HOST=import-web
+IMPORT_KEY=
+
+PRODUCT_BASE_HOST=product-base-web
+PRODUCT_BASE_KEY=
