--- a/Import/.env.example
+++ b/Import/.env.example
@@ -16,4 +16,16 @@ DB_USERNAME=postgres
 DB_PASSWORD=secret
 
 GEMINI_API_KEY=
+
+QUEUE_CONNECTION=rabbitmq
+
 RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+
+AMQP_CONNECTION=rabbitmq
+AMQP_HOST=rabbitmq
+AMQP_PORT=5672
+AMQP_USER=guest
+AMQP_PASSWORD=guest
