--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -100,6 +100,9 @@ services:
         environment:
             RABBITMQ_DEFAULT_USER: guest
             RABBITMQ_DEFAULT_PASS: guest
+            RABBITMQ_DEFAULT_VHOST: /
+        networks:
+            - testos
 
 networks:
     testos:
