--- a/Admin/package.json
+++ b/Admin/package.json
@@ -43,6 +43,7 @@
         "tw-animate-css": "^1.2.5",
         "vee-validate": "^4.15.1",
         "vue": "^3.5.13",
+        "vue-sonner": "^2.0.8",
         "zod": "^3.25.76"
     },
     "optionalDependencies": {
