--- a/Admin/.env.example
+++ b/Admin/.env.example
@@ -22,3 +22,8 @@ IMPORT_KEY=
 
 PRODUCT_BASE_HOST=product-base-web
 PRODUCT_BASE_KEY=
+
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
