--- a/.docker/ProductBase/Dockerfile
+++ b/.docker/ProductBase/Dockerfile
@@ -10,17 +10,31 @@ COPY ./php/php.ini "$PHP_INI_DIR/php.ini"
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y zip unzip git && \
-    php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
-    php composer-setup.php && \
-    php -r "unlink('composer-setup.php');" && \
-    mv composer.phar /usr/local/bin/composer && \
     chmod +x /usr/local/bin/install-php-extensions && \
     install-php-extensions pdo_pgsql pgsql zip igbinary xhprof sockets
 
 
-RUN groupadd -g $uid dev
-RUN useradd -u $gid -g dev dev
-COPY --chown=dev:dev . /app
+# create group/user correctly + home dir
+RUN groupadd -g ${gid} dev \
+ && useradd -m -u ${uid} -g ${gid} -s /bin/bash dev \
+ && mkdir -p /home/dev/.config/psysh /app \
+ && chown -R dev:dev /home/dev /app
+
+# Make PsySH/Composer paths predictable
+ENV HOME=/home/dev \
+    XDG_CONFIG_HOME=/home/dev/.config \
+    COMPOSER_HOME=/home/dev/.composer \
+    PATH="$PATH:/home/dev/.composer/vendor/bin"
+
+# Composer (if you want it available inside container)
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
+ && php composer-setup.php --install-dir=/usr/local/bin --filename=composer \
+ && rm -f composer-setup.php
+
 USER dev
+WORKDIR /app
+
+# Your code
+COPY --chown=dev:dev . /app
 
 
