--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
             - testos
         depends_on:
             - db
+            - rabbitmq
         working_dir: /app
 
 
@@ -51,6 +52,7 @@ services:
             - testos
         depends_on:
             - db
+            - rabbitmq
         working_dir: /app
 
     import-web:  
@@ -76,6 +78,7 @@ services:
             - testos
         depends_on:
             - db
+            - rabbitmq
         working_dir: /app
 
     db:
