--- a/Admin/composer.json
+++ b/Admin/composer.json
@@ -26,7 +26,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "tightenco/duster": "^3.2"
     },
     "autoload": {
         "psr-4": {
@@ -68,6 +69,12 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "lint": [
+            "./vendor/bin/duster lint"
+        ],
+        "fix": [
+            "./vendor/bin/duster fix"
         ]
     },
     "extra": {
