--- a/ProductBase/composer.json
+++ b/ProductBase/composer.json
@@ -19,7 +19,8 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "tightenco/duster": "^3.2"
     },
     "autoload": {
         "psr-4": {
@@ -56,6 +57,12 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "lint": [
+            "./vendor/bin/duster lint"
+        ],
+        "fix": [
+            "./vendor/bin/duster fix"
         ]
     },
     "extra": {
